[REFACTOR] Update DTO + Mapper